# bootstrap

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
src/: keystore.rs  main.rs
