[package]
name = "bootstrap"
version = "0.2.0"
edition = "2024"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
hex = "0.4.3"
p2panda-core = { git = "https://github.com/p2panda/p2panda", branch = "main", default-features = false }
p2panda-discovery = { git = "https://github.com/p2panda/p2panda", branch = "main", default-features = false }
p2panda-net = { git = "https://github.com/p2panda/p2panda", branch = "main", default-features = false, features = ["address_book", "iroh_endpoint", "discovery"] }
p2panda-store = { git = "https://github.com/p2panda/p2panda", branch = "main", default-features = false, features = ["sqlite"] }
rand_chacha = "0.9.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.19.1"
